kube_manifests/test-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-test-pod
  labels:
    podName: nginx-test-pod
spec:
  volumes:
    - name: task-pv-storage
      persistentVolumeClaim:
        claimName: ceph-test-pvc
  containers:
    - name: task-pv-container
      image: nginx
      ports:
        - containerPort: 80
          name: "http-server"
      volumeMounts:
        - mountPath: "/usr/share/nginx/html"
          name: task-pv-storage
---
apiVersion: v1
kind: Service
metadata:
  name: test-svc-nodeport
  namespace: default
spec:
  type: NodePort
  selector:
    podName: nginx-test-pod
  ports:
    - port: 80
      # By default and for convenience, the `targetPort` is set to
      # the same value as the `port` field.
      targetPort: 80
      # Optional field
      # By default and for convenience, the Kubernetes control plane
      # will allocate a port from a range (default: 30000-32767)
      nodePort: 30055
# EOF
